create zustand store, card entities and pages(basket, catalog)

--- a/src/widgets/header/Header.module.scss
+++ b/src/widgets/header/Header.module.scss
@@ -8,7 +8,7 @@ $backGroundCL:#0a0a0a;
   background-color: #212121;
   border-radius: 6px;
   padding: 1rem;
-  font-size: 35px;
+  font-size: 25px;
   color: #CCC;
   cursor: pointer;
   transition: all .3s ease
@@ -28,7 +28,7 @@ $backGroundCL:#0a0a0a;
       align-items: center;
       gap: 40px;
       .list__logo{
-        font-size: 50px;
+        font-size: 40px;
         background-color: #171616;
         border-radius: 6px;
         padding: 1rem;
@@ -36,9 +36,10 @@ $backGroundCL:#0a0a0a;
         cursor: pointer;
       }
       .list__item{
-        font-size: 35px;
+        font-size: 25px;
         color: #CCC;
         cursor: pointer;
+        margin: 10px;
       }
       .list__item__active{
         @include ActiveMedia();
@@ -50,8 +51,8 @@ $backGroundCL:#0a0a0a;
     align-items: center;
     gap: 20px;
     .under__media{
-      padding: 10px;
-      font-size: 35px;
+      margin: 10px;
+      font-size: 25px;
       color: #CCC;
       cursor: pointer;
     }
